@@ -7,7 +7,6 @@ package practica_06.gestor;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.ArrayList;
-import practica_06.gestor.Conexion.DatabaseType;
 import practica_06.utilidades.*;
 
 /**
@@ -21,20 +20,9 @@ public class gsModulo extends gestor {
 
     public void baja() {
         int id = pedirIDconNombre();
-        dropModulo(id);
-    }
-
-    private void dropModulo(int id) {
-        String query = String.format("DELETE FROM matriculas WHERE mat_mod_id = %d", id);
-        super.executeUpdate(query);
-        query = String.format("DELETE FROM modulos WHERE mod_id = %d", id);
-        super.executeUpdate(query);
-    }
-
-    private void insertModulo(String modulo) {
-        String query = String.format("INSERT INTO modulos(mod_name) VALUES ('%s')",
-                modulo);
-        super.executeUpdate(query);
+        if (id != -1) {
+            dropModulo(id);
+        }
     }
 
     public void alta() {
@@ -58,7 +46,76 @@ public class gsModulo extends gestor {
         } while (!nombreValido);
     }
 
-    public int pedirIDconNombre() {
+    public void createTable() {
+        String tableName = "modulos";
+        String queryMySQL = """
+                CREATE TABLE modulos (
+                  mod_id int NOT NULL AUTO_INCREMENT,
+                  mod_name varchar(255) COLLATE utf8mb4_general_ci NOT NULL,
+                  PRIMARY KEY (mod_id)
+                ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
+                """;
+        String queryPostgresSQL = """
+                CREATE TABLE modulos (
+                  mod_id serial PRIMARY KEY,
+                  mod_name varchar(255) NOT NULL
+                );
+                """;
+        super.createTable(tableName, queryMySQL, queryPostgresSQL);
+    }
+
+    public void exportTable() {
+        String query = "SELECT mod_id, mod_name FROM modulos;";
+        ResultSet rs = super.executeSelect(query);
+        String datos = "";
+        try {
+            while (rs.next()) {
+                int id;
+                String name;
+                id = rs.getInt(1);
+                name = rs.getString(2);
+                datos += String.format("%d;%s%n", id, name);
+            }
+            super.write(MODULOSPATH, datos);
+        } catch (SQLException e) {
+            Colors.errMsg("Imposible exportar los modulos");
+        }
+    }
+
+    public void importTable() {
+        ArrayList<String> filas = super.read(MODULOSPATH);
+        String query = "";
+        for (String fila : filas) {
+            String[] datos = fila.split(";");
+            int id = encontrarIDconNombre(datos[1]);
+            if (id != -1) {
+                query = String.format("UPDATE modulos SET mod_name= '%s' WHERE mod_id= " + id, datos[1]);
+            } else {
+                query = String.format("INSERT INTO modulos(mod_id, mod_name) VALUES (%d,'%s')", Integer.valueOf(datos[0]), datos[1]);
+            }
+            super.executeUpdate(query);
+        }
+        Colors.okMsg("Los datos de %s se han importado correctamente" + MODULOSPATH);
+    }
+
+    public void mostrarModulos() {
+        String selectQueryAlumnos = "SELECT mod_name FROM modulos";
+        System.out.println(super.getTitulo("modulos"));
+        try (ResultSet resultSetAlumnos = super.executeSelect(selectQueryAlumnos)) {
+            // Procesar el ResultSet
+            int cont = 1;
+            while (resultSetAlumnos.next()) {
+                String name = resultSetAlumnos.getString("mod_name");
+                System.out.println(String.format("%d.- %s", cont, name));
+                cont++;
+
+            }
+        } catch (SQLException e) {
+            Colors.errMsg("Imposible mostrar los modulos");
+        }
+    }
+    
+    protected int pedirIDconNombre() {
         String name;
         int rs;
         do {
@@ -75,7 +132,7 @@ public class gsModulo extends gestor {
         return rs;
     }
 
-    public int encontrarIDconNombre(String name) {
+    protected int encontrarIDconNombre(String name) {
         Integer sel = super.select("mod_id", "modulos", "mod_name = ?", Integer.class, name);;
         int res = -1;
         if (sel != null) {
@@ -83,84 +140,18 @@ public class gsModulo extends gestor {
         }
         return res;
     }
-
-    public void createTable() {
-        DatabaseType databaseType = Conexion.getDataBaseType();
-        String tableName = "modulos";
-        if (!super.tableExists(tableName)) {
-            // Primera instrucción: CREATE TABLE
-            String createTableQuery = "";
-
-            if (databaseType == DatabaseType.MYSQL) {
-                createTableQuery = """
-                CREATE TABLE modulos (
-                  mod_id int NOT NULL AUTO_INCREMENT,
-                  mod_name varchar(255) COLLATE utf8mb4_general_ci NOT NULL,
-                  PRIMARY KEY (mod_id)
-                ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
-                """.formatted(tableName);
-            } else if (databaseType == DatabaseType.POSTGRESQL) {
-                createTableQuery = """
-                CREATE TABLE %s (
-                  mod_id serial PRIMARY KEY,
-                  mod_name varchar(255) NOT NULL
-                );
-                """.formatted(tableName);
-            }
-            super.executeUpdate(createTableQuery);
-        } else {
-            System.out.println("La tabla '" + tableName + "' ya existe.");
-        }
+    
+    private void dropModulo(int id) {
+        String query = String.format("DELETE FROM matriculas WHERE mat_mod_id = %d", id);
+        super.executeUpdate(query);
+        query = String.format("DELETE FROM modulos WHERE mod_id = %d", id);
+        super.executeUpdate(query);
+        Colors.okMsg("Modulo eliminado exitosamente");
     }
 
-    public void exportTable() {
-        String query = "SELECT mod_id, mod_name FROM modulos;";
-        ResultSet rs = super.executeSelect(query);
-        String datos = "";
-        try {
-            while (rs.next()) {
-                int id;
-                String name;
-                id = rs.getInt(1);
-                name = rs.getString(2);
-                datos += String.format("%d;%s%n", id, name);
-            }
-            super.write(MODULOSPATH, datos);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-    }
-
-    public void importTable() {
-        ArrayList<String> filas = super.read(MODULOSPATH);
-        String query = "";
-        for (String fila : filas) {
-            String[] datos = fila.split(";");
-            int id = encontrarIDconNombre(datos[1]);
-            if (id != -1) {
-                query = String.format("UPDATE modulos SET mod_name= '%s' WHERE mod_id= " + id, datos[1]);
-            } else {
-                query = String.format("INSERT INTO modulos(mod_id, mod_name) VALUES (%d,'%s')", Integer.valueOf(datos[0]), datos[1]);
-            }
-            super.executeUpdate(query);
-
-        }
-    }
-
-    public void mostrarModulos() {
-        String selectQueryAlumnos = "SELECT * FROM modulos";
-
-        try (ResultSet resultSetAlumnos = super.executeSelect(selectQueryAlumnos)) {
-            // Procesar el ResultSet
-            int cont = 1;
-            while (resultSetAlumnos.next()) {
-                String name = resultSetAlumnos.getString("mod_name");
-                System.out.println(String.format("%d.- %s", cont, name));
-                cont++;
-
-            }
-        } catch (SQLException e) {
-            e.printStackTrace();
-        }
+    private void insertModulo(String modulo) {
+        String query = String.format("INSERT INTO modulos(mod_name) VALUES ('%s')",
+                modulo);
+        super.executeUpdate(query);
     }
 }
